@@ -1,3 +1,7 @@
+2005-07-10 Alain Magloire
+	Fix for PR 100992: Setting breakpoints for methods
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
+
 2005-07-07 Alain Magloire
 	Try to suspend the target before disconnecting.
 	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
